update page web biiopaulo

--- a/product.html
+++ b/product.html
@@ -35,47 +35,37 @@
                             <div id="folio-wrapper" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
                                 <div class="col">
                                     <div class="card shadow me-3 mt-5">
-                                        <img src="aves/ave1.jpg" class="card-img-top">
+                                        <img src="imagen/product1.jpg" class="card-img-top">
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="card shadow me-3 mt-5">
-                                        <img src="aves/ave2.jpg" class="card-img-top">
+                                        <img src="imagen/product2.jpg" class="card-img-top">
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="card shadow me-3 mt-5">
-                                        <img src="aves/ave3.jpg" class="card-img-top">
+                                        <img src="imagen/product3.jpg" class="card-img-top">
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="card shadow me-3">
-                                        <img src="aves/ave4.jpg" class="card-img-top">
+                                        <img src="imagen/product4.jpg" class="card-img-top">
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="card shadow me-3">
-                                        <img src="aves/ave5.jpg" class="card-img-top">
+                                        <img src="imagen/product5.jpg" class="card-img-top">
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="card shadow me-3">
-                                        <img src="aves/ave6.jpg" class="card-img-top">
+                                        <img src="imagen/product6.jpg" class="card-img-top">
                                     </div>
                                 </div>
                                 <div class="col">
                                     <div class="card shadow me-3">
-                                        <img src="aves/ave7.jpg" class="card-img-top">
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="card shadow me-3">
-                                        <img src="aves/ave8.jpg" class="card-img-top">
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="card shadow me-3">
-                                        <img src="aves/ave9.jpg" class="card-img-top">
+                                        <img src="imagen/product7.jpg" class="card-img-top">
                                     </div>
                                 </div>
                             </div>
